syntax = "proto3";

option java_multiple_files = true;
package com.glance.spaces.zapp.content.common;

import "com/glance/spaces/zapp/content/common/weather_common.proto";
import "validate/validate.proto";

message WeatherAlerts {
  int64 start_time = 1;
  int64 end_time = 2;
  Source source = 3 [(validate.rules).enum = {not_in: [0]}];
  string title = 4;
  string description = 5;
  Severity severity = 6 [(validate.rules).enum = {not_in: [0]}];
}